oyster-lib/src/query/snapshots/oyster_lib__query__parser__tests__test_build_md__build_md.snap
---
source: oyster-lib/src/query/parser.rs
expression: json
---
{
  "frontmatter": {
    "value": {
      "title": "Test Document",
      "tags": [
        "rust",
        "markdown"
      ]
    },
    "range": {
      "loc": "1:1-6:4",
      "bytes": [
        0,
        56
      ]
    }
  },
  "sections": {
    "heading": null,
    "path": "root",
    "content": "\nSome preamble.\n\n",
    "range": {
      "loc": "7:1-17:1",
      "bytes": [
        57,
        137
      ]
    },
    "implicit": true,
    "children": [
      {
        "heading": {
          "level": 1,
          "text": "# Introduction\n",
          "range": {
            "loc": "10:1-11:1",
            "bytes": [
              74,
              89
            ]
          }
        },
        "path": "1",
        "content": "\nIntro content here.\n\n",
        "range": {
          "loc": "10:1-17:1",
          "bytes": [
            74,
            137
          ]
        },
        "implicit": false,
        "children": [
          {
            "heading": {
              "level": 2,
              "text": "## Details\n",
              "range": {
                "loc": "14:1-15:1",
                "bytes": [
                  111,
                  122
                ]
              }
            },
            "path": "1.1",
            "content": "\nMore details.\n",
            "range": {
              "loc": "14:1-17:1",
              "bytes": [
                111,
                137
              ]
            },
            "implicit": false,
            "children": []
          }
        ]
      }
    ]
  }
}
